--- a/BethanysPieShop/Views/_ViewImports.cshtml
+++ b/BethanysPieShop/Views/_ViewImports.cshtml
@@ -1,1 +1,5 @@
 ﻿@using BethanysPieShop.ViewModels
+@using BethanysPieShop.Models
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, AuthoringTagHelpers
+@addTagHelper BethanysPieShop.TagHelpers.*, BethanysPieShop
