--- a/BethanysPieShop/wwwroot/content/site.css
+++ b/BethanysPieShop/wwwroot/content/site.css
@@ -6,8 +6,9 @@
 
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-    background-image: url('/images/pattern.png');
-    background-repeat: repeat;
+    background-image: url(/Images/pattern.png), url(/Images/bethanylogo.png);
+    background-position: left top, left top;
+    background-repeat: repeat, no-repeat;
     font-family: 'Source Sans Pro', sans-serif;
 }
 
